fix z-index bug

--- a/static/style/components/drawer-panel.less
+++ b/static/style/components/drawer-panel.less
@@ -74,7 +74,7 @@
 	position: absolute;
 	background-color: #ffffff;
 	bottom: 0;
-	z-index: 9;
+	z-index: 10;
 	padding-top: 22rpx;
 	.drawer-button {
 		width: calc(100% - @base-gap * 2);
