--- a/static/style/layout/bottom-menu.less
+++ b/static/style/layout/bottom-menu.less
@@ -6,7 +6,7 @@
 	background-color: #ffffff;
 	position: fixed;
 	bottom: 0;
-	z-index: 9;
+	z-index: 10;
 	.bottom-menu-box {
 		width: 60%;
 		height: 100%;
