--- a/static/style/layout/top-nav.less
+++ b/static/style/layout/top-nav.less
@@ -12,7 +12,7 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	z-index: 9;
+	z-index: 10;
 	.top-nav-back {
 		width: 25%;
 		.top-nav-back-icon{
@@ -50,7 +50,7 @@
 	background-color: #ffffff;
 	position: fixed;
 	top: @nav-top;
-	z-index: 9;
+	z-index: 10;
 	.nav-search-box {
 		width: calc(100% - @base-gap * 2);
 		height: 72rpx;
@@ -116,7 +116,7 @@
 	background-color: #ffffff;
 	position: fixed;
 	top: calc(@nav-top + @search-top);
-	z-index: 9;
+	z-index: 10;
 	.nav-tab-box{
 		margin: 0 auto;
 	}
