--- a/static/style/layout/top-status.less
+++ b/static/style/layout/top-status.less
@@ -3,5 +3,5 @@
 .status_bar {
 	height: var(--status-bar-height);
 	width: 100%;
-	z-index: 9;
+	z-index: 10;
 }
